--- a/app/src/main/res/layout/activity_lista_pacotes.xml
+++ b/app/src/main/res/layout/activity_lista_pacotes.xml
@@ -53,6 +53,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/lista_pacotes_img_banner"
         app:layout_constraintBottom_toBottomOf="parent"
-        />
+        tools:listitem="@layout/item_lista_pacote"/>
 
 </android.support.constraint.ConstraintLayout>
