--- a/app/src/main/res/layout/item_lista_pacote.xml
+++ b/app/src/main/res/layout/item_lista_pacote.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <android.support.v7.widget.CardView
         android:id="@+id/item_lista_pacote_cardview"
@@ -11,10 +11,11 @@
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         app:cardCornerRadius="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/item_lista_pacote_img"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
@@ -24,6 +25,7 @@
                 android:id="@+id/item_lista_pacote_img"
                 android:layout_width="0dp"
                 android:layout_height="100dp"
+                android:contentDescription="@string/item_lista_pacotes_img_desc"
                 android:scaleType="centerCrop"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -81,6 +83,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="@id/item_lista_pacote_qtd_dias"
                 app:layout_constraintTop_toBottomOf="@id/item_lista_pacote_qtd_dias"
+                android:layout_marginBottom="8dp"
                 tools:text="@sample/pacotes.json/pacotes/preco" />
 
         </android.support.constraint.ConstraintLayout>
