--- a/app/src/main/res/layout/activity_lista_pacotes.xml
+++ b/app/src/main/res/layout/activity_lista_pacotes.xml
@@ -16,7 +16,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@android:color/holo_purple" />
+        app:srcCompat="@color/colorPrimary" />
 
     <TextView
         android:id="@+id/lista_pacote_tipo_pacote"
@@ -26,11 +26,11 @@
         android:text="@string/lista_pacotes_tipo_pacote"
         android:textColor="@android:color/white"
         android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/lista_pacotes_img_banner"
+        app:layout_constraintEnd_toEndOf="@id/lista_pacotes_img_banner"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="@id/lista_pacotes_img_banner"
+        app:layout_constraintTop_toTopOf="@id/lista_pacotes_img_banner"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
@@ -49,10 +49,12 @@
         android:id="@+id/lista_pacotes_lista"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/lista_pacotes_img_banner"
+        android:divider="@null"
+        android:dividerHeight="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:listitem="@layout/item_lista_pacote"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/lista_pacotes_img_banner"
+        tools:listitem="@layout/item_lista_pacote" />
 
 </android.support.constraint.ConstraintLayout>
